--- a/package.json
+++ b/package.json
@@ -1,6 +1,3 @@
-{
-  "dependencies": {
-    "@types/uuid": "^9.0.0",
-    "uuid": "^9.0.0"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:9b93bb15881e3aafd591ba55485fe0f1aeeb9bdbc63242fc435188ce1938a820
+size 78
